<resources>
    <string name="app_name">Barcode Buddy Scanner</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="welcome">Welcome!</string>
    <string name="tut_text">Let\'s connect to Barcode Buddy!\n\nPlease open Barcode Buddy, go to the API menu and click on the three dots in the top right corner, to select \"Add mobile app\". Then scan the displayed QR code.</string>
    <string name="scan">Scan</string>
    <string name="url">URL</string>
    <string name="api">API</string>
    <string name="connect">Connect</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="error_unex">Error: Unexpected response</string>
    <string name="error">Error: </string>
    <string name="e_invalidqr">Invalid QR code, no setup info found.</string>
    <string name="error_too_old">Please update your Barcode Buddy server.</string>
    <string name="tut_connected">Connected! Tap on the barcode picture to start scanning.</string>
    <string name="error_cnc">Could not connect to server!</string>
    <string name="error_camera_permission_denied">Camera permission is required to scan barcodes.</string>
    <string name="tut_scan">Scan setup QR code</string>
    <string name="ignore_invalid_ssl_certificates">Ignore invalid SSL certificates</string>
    <string name="crashed">Unexpected Error</string>
    <string name="crashed_t">Sorry, Barcode Buddy has crashed. Please click on okay to send us an email for debugging. You can also add info in the field below.</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feedback_header">Feedback for found barcodes</string>
    <string name="use_vibration">Vibrate</string>
    <string name="use_beep">Sound</string>
    <string name="volume">Volume</string>
    <string name="scanner_header">Barcode Scanner</string>
    <string name="orientation">Orientation</string>

    <string name="orientation_auto">Auto</string>
    <string name="orientation_land">Landscape</string>
    <string name="orientation_port">Portrait</string>
    <string name="use_bluetooth_scanner">Enable Bluetooth Barcode Scanner</string>
    <string name="use_bluetooth_scanner_s">Scan a barcode with a connected physical scanner</string>
    <string name="use_bluetooth_barcode_scanner_in_this_menu">Use Bluetooth barcode scanner in this menu</string>
    <string name="b_mode">Set Mode</string>

    <string name="mode_p">Purchase</string>
    <string name="mode_c">Consume</string>
    <string name="mode_o">Open</string>
    <string name="mode_i">Inventory</string>
    <string name="mode_s">Add to shoppinglist</string>
    <string name="mode_ca">Consume All</string>
    <string name="mode_cs">Consume (spoiled)</string>

</resources>
